--- a/page2.html
+++ b/page2.html
@@ -8,7 +8,7 @@
 
 <body>
 Ceci est la page 2.<br />
-<a href="index.html" target="_self">Retourner sur ma page<a>    
+<a href="index.html" target="_self">Retourner sur premiere page du debut<a>    
 </body>
 
 </html>
