--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-Bienvenu sur mon site Web!!!!!!!!!!!!!!<br />
+Bienvenu sur mon site Web!!!!!!!!!!!!!!<br>
 Aller sur la <a href="page2.html" target="_self">Page 2</a><br/>
 <img src="images/coder.jpg" alt="coder">    
 </body>
