--- a/page2.html
+++ b/page2.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-Ceci est la page 2.<br/>
+Ceci est la page 2.<br>
 <a href="index.html" target="_self">Retourner sur premiere page du debut<a>    
 </body>
 
